<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:src="@drawable/question"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />

    <RadioGroup
        android:id="@+id/rbg_roles"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rb_citizen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/citizen"/>

        <RadioButton
            android:id="@+id/rb_mafia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mafia"/>

        <RadioButton
            android:id="@+id/rb_sheriff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sheriff"/>

        <RadioButton
            android:id="@+id/rb_don"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don"/>

    </RadioGroup>

</LinearLayout>